# TauriPluginHttp

./: CHANGELOG.md  Cargo.toml  DEPENDENTS.md  README.md  api-iife.js  build.rs  package.json
Source/: commands.rs  error.rs  lib.rs  scope.rs
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  scope.rs
